Fix times and RSVP text
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             font-family: Parisienne;
             font-size: 2em;
         }
+        h3#rsvp {
+            font-family: Quicksand, ui-sans-serif;
+        }
         body {
             text-align: center;
             font-family: Quicksand, ui-sans-serif;
@@ -110,9 +113,9 @@
             <dl>
             <dt class="time">5:00pm</dt><dd class="event">Wedding</dd>
             <br />
-            <dt class="time">6:00pm - 7:00pm</dt><dd class="event">Cocktail Hour</dd>
+            <dt class="time">5:45pm</dt><dd class="event">Cocktail Hour</dd>
             <br />
-            <dt class="time">7:00pm - 11:00pm</dt><dd class="event">Dinner and Reception</dd>
+            <dt class="time">7:00pm</dt><dd class="event">Dinner and Reception</dd>
             </dl>
             <hr />
         </div>
@@ -143,7 +146,7 @@
             <hr />
         </div>
         <div id="rsvp">
-            <h3>rsvp</h3>
+            <h3 id="rsvp">r.s.v.p.</h3>
             <form name="rsvp" method="post" action="mailto:nolan@nbrubaker.com" enctype="text/plain">
                 <label for="name">Your name </label>
                 <input type="text" name="name" id="name" required />
