New header/footer images, integrate colors
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
         <style type="text/css">
         a {
             text-decoration: none;
+            color: #204868;
+        }
+        a:visited {
+            color: #784060;
         }
         #ournames {
             font-family: Parisienne, ui-serif;
             font-size: 3em;
+            color: #203050;
         }
         h3,h4 {
             font-family: Parisienne;
@@ -25,6 +30,7 @@
             font-family: Quicksand, ui-sans-serif;
             display: block;
             font-size: 20px;
+            background-color: #B0B8B0;
         }
         .time {
             font-size: 24px;
@@ -90,7 +96,7 @@
     </head>
     <body>
         <header>
-            <img id="headpic" src="./header.webp">
+            <img id="headpic" src="./header.png">
         </header>
         <h1>
             <span id="ournames">Christine and Nolan</span>
@@ -165,6 +171,6 @@
         </div>
     </body>
     <footer>
-        <img src="./footer.webp">
+        <img src="./footer.png">
     </footer>
 </html>
