Add vegetarian option
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
                 <input type="text" name="beef" id="beef" maxlength=1 size=1 placeholder="0" pattern="^\d$" required />
                 <span class="validity"></span>
                 <br />
+                <label for="vegetarian">Number of vegetarian entrees </label>
+                <input type="text" name="vegetarian" id="vegetarian" maxlength=1 size=1 placeholder="0" pattern="^\d$" required />
+                <span class="validity"></span>
+                <br />
                 <button>Submit</button>
             </form>
         </div>
