Move body to ems for mobile scaling
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             text-align: center;
             font-family: Quicksand, ui-sans-serif;
             display: block;
-            font-size: 24px;
+            font-size: 1.5em;
             background-color: #B0B8B0;
         }
         dl {
@@ -136,7 +136,7 @@
             <br />
             <dt class="time">5:45pm</dt><dd class="event">Cocktail Hour</dd>
             <br />
-            <dt class="time">7:00pm</dt><dd class="event">Dinner and Reception</dd>
+            <dt class="time">7:00pm</dt><dd class="event">Dinner & Reception</dd>
             </dl>
             <hr />
         </div>
