--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+        <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+        <link rel="icon" href="favicon-32x32.png">
         <style type="text/css">
         a {
             text-decoration: none;
