--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         h3#rsvp {
             font-family: Quicksand, ui-sans-serif;
         }
+        @media (min-width:500px) {
+            body {
+                font-size: 40px;
+            }
+        }
         body {
             text-align: center;
             font-family: Quicksand, ui-sans-serif;
