Trying a max width for fonts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         h3#rsvp {
             font-family: Quicksand, ui-sans-serif;
         }
-        @media (min-width:500px) {
+        @media (max-width:500px) {
             body {
                 font-size: 70px;
             }
