--- a/index.html
+++ b/index.html
@@ -28,11 +28,6 @@
         h3#rsvp {
             font-family: Quicksand, ui-sans-serif;
         }
-        @media (max-width:500px) {
-            body {
-                font-size: 70px;
-            }
-        }
         body {
             text-align: center;
             font-family: Quicksand, ui-sans-serif;
@@ -77,6 +72,18 @@
             height: auto;
             width: 40%;
             margin: 1em;
+        }
+
+        @media (max-width:500px) {
+            body {
+                font-size: 2em;
+            }
+            h3,h4 {
+                font-size: 4em;
+            }
+            #ournames {
+                font-size: 6em;
+            }
         }
         
         input + span {
