--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
             margin: 1em;
         }
 
-        @media (max-width:500px) {
+        @media (min-width:400px) {
             body {
-                font-size: 2em;
+                font-size: 3em;
             }
             h3,h4 {
-                font-size: 4em;
+                font-size: 3.5em;
             }
             #ournames {
-                font-size: 6em;
+                font-size: 4em;
             }
         }
         
