Add a max width on our mobile media query
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             margin: 1em;
         }
 
-        @media (min-width:400px) {
+        @media (min-width:300px) and (max-width:1000px) {
             body {
                 font-size: 3em;
             }
