Use Google Form for RSVPs
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -191,30 +191,11 @@
         </div>
         <div id="rsvp">
             <h3 id="rsvp">r.s.v.p.</h3>
-            <!-- TODO: fix up form validation for the meals; make a small JS script to format it -->
-            <form name="rsvp" method="post" action="mailto:nolan@nbrubaker.com" enctype="text/plain">
-                <label for="name">Your name </label>
-                <input type="text" name="name" id="name" required />
-                <span class="validity"></span>
-                <br />
-                <label for="guests">Number of guests </label>
-                <input type="text" name="guests" id="guests" maxlength=1 size=1 placeholder="0" pattern="^\d$" required />
-                <span class="validity"></span>
-                <br />
-                <label for="chicken">Number of chicken entrees </label>
-                <input type="text" name="chicken" id="chicken" maxlength=1 size=1 placeholder="0" pattern="^\d$" required />
-                <span class="validity"></span>
-                <br />
-                <label for="beef">Number of beef entrees </label>
-                <input type="text" name="beef" id="beef" maxlength=1 size=1 placeholder="0" pattern="^\d$" required />
-                <span class="validity"></span>
-                <br />
-                <label for="vegetarian">Number of vegetarian entrees </label>
-                <input type="text" name="vegetarian" id="vegetarian" maxlength=1 size=1 placeholder="0" pattern="^\d$" required />
-                <span class="validity"></span>
-                <br />
-                <button>Submit</button>
-            </form>
+            <p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3_DqttxjJcL0BXdpIMGV8b0URanjrXxIsaafTzUT6skthbQ/viewform?usp=sharing">
+                Please RSVP if you will be able to attend!
+                </a>
+            </p>
         </div>
     </body>
     <footer>
