Add some places to visit
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             font-family: Parisienne;
             font-size: 72px;
         }
+        h5 {
+            font-size: 2em;
+        }
         h3#rsvp {
             font-family: Quicksand, ui-sans-serif;
         }
@@ -187,7 +190,30 @@
         </div>
         <div id="placesToVisit">
             <h3>Places to Visit</h3>
-        <hr />
+                <h5>
+                    <a href="https://www.mapleindiancuisine.com/">
+                        Maple Indian
+                    </a>
+                </h5>
+                <p>Our favorite Indian food in Michiana!</p>
+                <h5>
+                    <a href="https://www.sbchocolatedowntown.com/">
+                        South Bend Chocolate Cafe
+                    </a>
+                </h5>
+                <p>Great coffee and chocolates. Where we went on our first date!</p>
+                <h5>
+                    <a href="https://corndance.com/">
+                        Corndance Tavern
+                    </a>
+                </h5>
+                <p>The best steaks in Michiana. They make amazing desserts, too!</p>
+                <h5>
+                    <a href="">
+                    A Game Shop
+                    </a>
+                </h5>
+        <hr /https://corndance.com/>
         </div>
         <div id="rsvp">
             <h3 id="rsvp">r.s.v.p.</h3>
