Add parking map
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         headpic {
             margin-bottom: -30px;
         }
-        div.signs {
+        div.signs div.map {
             margin: 5em;
             max-width: 100%;
             display: inline-block;
@@ -176,6 +176,9 @@
                     <img class="sign" src="./parkingsign.jpeg" alt="sign for shops in The Old Bag Factory. The venue is on the 3rd floor.">
                     <img class="sign" src="./mainsign.jpeg" alt="main entrance sign for The Old Bag Factory">
                 </div>
+                <div id="map">
+                    <img class="sign" src="./parking.jpg" alt="parking map">
+                </div>
             </div>
             <hr />
         </div>
@@ -208,12 +211,7 @@
                     </a>
                 </h5>
                 <p>The best steaks in Michiana. They make amazing desserts, too!</p>
-                <h5>
-                    <a href="">
-                    A Game Shop
-                    </a>
-                </h5>
-        <hr /https://corndance.com/>
+        <hr />
         </div>
         <div id="rsvp">
             <h3 id="rsvp">r.s.v.p.</h3>
