Use smaller header & footer images
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </head>
     <body>
         <header>
-            <img id="headpic" src="./header.png">
+            <img id="headpic" src="./header.jpg">
         </header>
         <h1>
             <span id="ournames">Christine and Nolan</span>
@@ -227,6 +227,6 @@
         <div class="neatline">
             <p>10.19.2024</p>
         </div>
-        <img src="./footer.png">
+        <img src="./footer.jpg">
     </footer>
 </html>
