Adjust margins on head/foot images
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
         img {
             width: 100%;
         }
-        headpic {
-            margin-bottom: -30px;
+        img#headpic {
+            margin-top: -7px;
+        }
+        img#footpic {
+            margin-bottom: -5px;
         }
         div.signs div.map {
             margin: 5em;
@@ -227,6 +230,6 @@
         <div class="neatline">
             <p>10.19.2024</p>
         </div>
-        <img src="./footer-fs8.png">
+        <img id="footpic" src="./footer-fs8.png">
     </footer>
 </html>
