Add registry link
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
                 </a>
             </p>
         </div>
+        <div id="registry">
+            <h3 id="registry"><a href="https://www.theknot.com/us/christine-deutscher-and-nolan-brubaker-oct-2024/registry">Registry</a></h3>
+        </div>
     </body>
     <footer>
         <div id="initials">c&n</div>
