Add link to our story
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                 <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#venue">Venue</a></li>
                 <li><a href="#accomodations">Accomodations</a></li>
+                <li><a href="./about.html">Our Story</a></li>
             </menu>
         </div>
         <div id="schedule">
