Nav tidying and RSVP language fix
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             padding-top: 20px;
             box-sizing: border-box;
         }
-        li {
-            width: 33%;
+        li.nav {
+            width: 25%;
         }
         img {
             width: 100%;
@@ -143,14 +143,14 @@
         
         <div id="nav">
             <menu>
-                <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#venue">Venue</a></li>
-                <li><a href="#accomodations">Accomodations</a></li>
-                <li><a href="./about.html">Our Story</a></li>
+                <li class="nav"><a href="#schedule">Schedule</a></li>
+                <li class="nav"><a href="#venue">Venue</a></li>
+                <li class="nav"><a href="#accomodations">Accomodations</a></li>
+                <li class="nav"><a href="./about.html">Our Story</a></li>
             </menu>
+            <hr />
         </div>
         <div id="schedule">
-            <hr />
             <br />
             <h3>Schedule</h3>
             <dl>
@@ -221,7 +221,7 @@
             <h3 id="rsvp">r.s.v.p.</h3>
             <p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3_DqttxjJcL0BXdpIMGV8b0URanjrXxIsaafTzUT6skthbQ/viewform?usp=sharing">
-                Please RSVP if you will be able to attend!
+                Please RSVP here if you will be able to attend!
                 </a>
             </p>
         </div>
