Make navigation menu "sticky"
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             width: 49%;
             text-align: left;
         }
+        div#nav {
+            position: sticky;
+            top: 1px;
+        }
         menu {
             list-style: none;
             display: flex;
