Add rsvp to nav
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 <li class="nav"><a href="#venue">Venue</a></li>
                 <li class="nav"><a href="#accomodations">Accomodations</a></li>
                 <li class="nav"><a href="./about.html">Our Story</a></li>
+                <li class="nav"><a href="#rsvp">RSVP</a></li>
             </menu>
             <hr />
         </div>
