Unify navigation and style
* Combine styles into an external file
* Add navigation menu on about page

Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -8,131 +8,7 @@
         <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
         <link rel="icon" href="favicon-32x32.png">
-        <style type="text/css">
-        a {
-            text-decoration: none;
-            color: #204868;
-        }
-        a:visited {
-            color: #784060;
-        }
-        #ournames {
-            font-family: Parisienne, ui-serif;
-            font-size: 96px;
-            color: #203050;
-        }
-        h3,h4 {
-            font-family: Parisienne;
-            font-size: 72px;
-        }
-        h5 {
-            font-size: 2em;
-        }
-        h3#rsvp {
-            font-family: Quicksand, ui-sans-serif;
-        }
-        body {
-            text-align: center;
-            font-family: Quicksand, ui-sans-serif;
-            display: block;
-            font-size: 1.5em;
-            background-color: #B0B8B0;
-        }
-        dl {
-            display: flex;
-            flex-wrap: wrap;
-        }
-        dt {
-            width: 49%;
-            text-align: right;
-        }
-        dd {
-            margin-left: auto;
-            width: 49%;
-            text-align: left;
-        }
-        div#nav {
-            position: sticky;
-            top: 1px;
-        }
-        menu {
-            list-style: none;
-            display: flex;
-            padding-top: 20px;
-            box-sizing: border-box;
-        }
-        li.nav {
-            width: 25%;
-        }
-        img {
-            width: 100%;
-        }
-        img#headpic {
-            margin-top: -7px;
-        }
-        img#footpic {
-            margin-bottom: -5px;
-        }
-        div.signs div.map {
-            margin: 5em;
-            max-width: 100%;
-            display: inline-block;
-        }
-        img.sign {
-            height: auto;
-            width: 40%;
-            margin: 1em;
-        }
-
-        @media (min-width:300px) and (max-width:1000px) {
-            body {
-                font-size: 3em;
-            }
-            h3,h4 {
-                font-size: 3em;
-            }
-            #ournames {
-                font-size: 3em;
-            }
-        }
-        
-        input + span {
-            padding-right: 30px;
-        }
-
-        input:invalid + span::after {
-            position: absolute;
-            content: "✖";
-            padding-left: 5px;
-        }
-
-        input:valid + span::after {
-            position: absolute;
-            content: "✓";
-            padding-left: 5px;
-        }
-        #initials {
-            margin-top: 100px;
-            font-weight: normal;
-            font-size: 62px;
-        }
-        hr {
-            width: 80%;
-            height: 5px;
-            border: none;
-            border-top: 3px double;
-            overflow: visible;
-        }
-        hr::after {
-            content: '♥️ ♥️ ♥️';
-            position: relative;
-            padding: 0 4px;
-            position: relative;
-            top: -13px;
-            color: transparent;
-            text-shadow: 0 0 0 #582848;
-        }
-        </style>
+        <link rel="stylesheet" href="style.css"
     </head>
     <body>
         <header>
