--- a/index.html
+++ b/index.html
@@ -24,12 +24,30 @@
         <div id="nav">
             <menu>
                 <li class="nav"><a href="#schedule">Schedule</a></li>
-                <li class="nav"><a href="#venue">Venue</a></li>
-                <li class="nav"><a href="#accomodations">Accomodations</a></li>
-                <li class="nav"><a href="./about.html">Our Story</a></li>
+                <li class="nav"><a href="#venue">Location</a></li>
+                <li class="nav"><a href="#accomodations">Stay</a></li>
                 <li class="nav"><a href="#rsvp">RSVP</a></li>
             </menu>
             <hr />
+        </div>
+
+        <div id="aboutus">
+            <img id="us" src="./us.jpeg">
+            <p>
+            We met in October 2018 on an online dating app. Nolan was initially impressed with Christine's love for animals and music. Despite traveling at the time, he was excited and anxious to receive her next message.
+            </p>
+            
+            <p>
+            Our first date was at various places in downtown South Bend, including the South Bend Chocolate Cafe and Chicory Cafe, followed by a walk down the St. Joe River.
+            </p>
+            
+            <p>
+            We love traveling together, and have been to a bunch of places already, such as Paris, London, Edinburgh, Amsterdam, Niagara Falls, Denver, Minneapolis, Phoenix, and Omaha. We'd love to see even more of the world together in the furture!
+            </p>
+
+            <p>
+            Animals also hold a special place in our hearts, and we share our home with five cats (Jambi, Koda, Mochi, Purl, Sunshine), a dog (Bernie), and a green cheek conure parrot (Jordan).
+            </p>
         </div>
         <div id="schedule">
             <br />
@@ -44,7 +62,9 @@
             <hr />
         </div>
         <div id="venue">
-            <h3>Venue</h3>
+            <h3>Location</h3>
+            Old Bag Factory, 3rd Floor
+            <br />
             Bread and Chocolate
             <br />
             1100 Chicago Avenue, Goshen, IN, 46528
@@ -53,23 +73,24 @@
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2983.9203987557353!2d-85.8524503886221!3d41.592604771154676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8816edab54d4f2cb%3A0x8bd1b3ef59928883!2sBread%20%26%20Chocolate!5e0!3m2!1sen!2sus!4v1708204350315!5m2!1sen!2sus" width="800" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div id="directions">
-                <h4>Directions</h4>
+                <h4>Directions to Venue</h4>
                 From the parking lot, follow the signs into the Main Entrance of The Old Bag Factory and proceed to the <em>3rd floor</em> for the venue. There is an elevator inside the doors and to the right.
                 <br />
                 <br />
                 <div id="signs">
-                    <img class="sign" src="./parkingsign.jpeg" alt="sign for shops in The Old Bag Factory. The venue is on the 3rd floor.">
-                    <img class="sign" src="./mainsign.jpeg" alt="main entrance sign for The Old Bag Factory">
+                    <a href="./parkingsign.jpeg"><img class="sign" src="./parkingsign.jpeg" alt="sign for shops in The Old Bag Factory. The venue is on the 3rd floor."></a>
+                    <a href="./mainsign.jpeg"><img class="sign" src="./mainsign.jpeg" alt="main entrance sign for The Old Bag Factory"></a>
                 </div>
                 <div id="map">
-                    <img class="sign" src="./parking.jpg" alt="parking map">
+                    <a href="./parking.jpg"><img class="sign" src="./parking.jpg" alt="parking map"></a>
                 </div>
             </div>
             <hr />
         </div>
         <div id="accomodations">
             <h3>Guest Accomodations</h3>
-            There are a <a href="https://maps.app.goo.gl/UJSLNuuiV5Eb7AB37">variety of hotels</a> near Goshen.
+            There are a <a href="https://maps.app.goo.gl/UJSLNuuiV5Eb7AB37">variety of hotels</a> near Goshen where the ceremony is, or <a href="https://maps.app.goo.gl/gJScYBZbJkcxgii56">in Mishawaka</a> near our home.
+            <br />
             <br />
             Alternatively, you may enjoy <a href="https://www.airbnb.com/s/Goshen--IN/homes?tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&flexible_trip_lengths%5B%5D=one_week&monthly_start_date=2024-03-01&monthly_length=3&monthly_end_date=2024-06-01&price_filter_input_type=0&channel=EXPLORE&date_picker_type=calendar&checkin=2024-10-18&checkout=2024-10-20&adults=2&source=structured_search_input_header&search_type=filter_change">Airbnb</a> options near Goshen.
             <br />
@@ -95,7 +116,7 @@
                         Corndance Tavern
                     </a>
                 </h5>
-                <p>The best steaks in Michiana. They make amazing desserts, too!</p>
+                <p>The best steaks anywhere. They make amazing desserts, too!</p>
         <hr />
         </div>
         <div id="rsvp">
@@ -107,7 +128,7 @@
             </p>
         </div>
         <div id="registry">
-            <h3 id="registry"><a href="https://www.theknot.com/us/christine-deutscher-and-nolan-brubaker-oct-2024/registry">Registry</a></h3>
+            <h3 id="registry"><a href="https://www.theknot.com/us/christine-deutscher-and-nolan-brubaker-oct-2024/registry">Visit Our Registry</a></h3>
         </div>
     </body>
     <footer>
