Reword some things for spacing
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="nav">
             <menu>
                 <li class="nav"><a href="#schedule">Schedule</a></li>
-                <li class="nav"><a href="#venue">Location</a></li>
+                <li class="nav"><a href="#venue">Venue</a></li>
                 <li class="nav"><a href="#accomodations">Stay</a></li>
                 <li class="nav"><a href="#rsvp">RSVP</a></li>
             </menu>
@@ -58,7 +58,7 @@
             <dl>
             <dt class="time">5:00pm</dt><dd class="event">Wedding Ceremony</dd>
             <br />
-            <dt class="time">5:45pm</dt><dd class="event">Cocktail Hour</dd>
+            <dt class="time">5:45pm</dt><dd class="event">Hors d'oeuvres & Cocktails</dd>
             <br />
             <dt class="time">7:00pm</dt><dd class="event">Dinner & Reception</dd>
             </dl>
