Add more places to visit
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/index.html
+++ b/index.html
@@ -105,11 +105,33 @@
         <div id="placesToVisit">
             <h3>Places to Visit</h3>
                 <h5>
+                    <a href="https://www.atlasobscura.com/places/shiojiri-niwa">
+                        Shiojiri Niwa (Shiojiri Garden)
+                    </a>
+                </h5>
+                <p>A beautiful, quiet park near our home.</p>
+
+                <h5>
+                    <a href="https://www.in.gov/dnr/state-parks/parks-lakes/potato-creek-state-park/">
+                        Potato Creek State Park
+                    </a>
+                </h5>
+                <p>The closest state park with beautiful natural prairie landscapes and lots of biking, walking, and riding trails.</p>
+
+                <h5>
+                    <a href="https://haciendafiesta.com/">
+                        Hacienda Restaurants
+                    </a>
+                </h5>
+                <p>A regional chain of Mexican restaurants. Amazing chips and salsa!</p>
+
+                <h5>
                     <a href="https://www.mapleindiancuisine.com/">
                         Maple Indian
                     </a>
                 </h5>
                 <p>Our favorite Indian food in Michiana!</p>
+
                 <h5>
                     <a href="https://www.sbchocolatedowntown.com/">
                         South Bend Chocolate Cafe
